--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.7",
@@ -13,8 +14,7 @@
     "react-scripts": "^2.1.3",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.10",
-    "sass-loader": "^12.6.0",
-    "scss": "^0.2.4",
+    "spotify-web-api-js": "^1.5.2",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.18"
   },
@@ -42,7 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "node-sass": "^7.0.1"
-  }
+  "devDependencies": {}
 }
